apep_0135/v4/REPLICATION.md
# Replication Package: apep_0140

This folder contains all code and data needed to replicate the analysis.

## Requirements

- Python 3.10+
- Required packages: See below (or `requirements.txt` if present)

```bash
pip install pandas numpy statsmodels matplotlib
```

## Data

Data is fetched from the Census PUMS API (no API key required for basic queries).

**Cached data files:**
- `alternative_models.rds`
- `analysis_data.rds`
- `cbsa_county_crosswalk.csv`
- `crosswalk.rds`
- `elec_cbsa.rds`
- `election_2008.csv`
- `election_2012.csv`
- `election_2016.csv`
- `election_2020.csv`
- `election_2024.csv`
- `main_models.rds`
- `robustness_models.rds`
- `tech_cbsa.rds`

## Code

**Scripts (run in order):**
- `00_packages.R`
- `01_clean_data.R`
- `01b_fetch_alternative_controls.R`
- `02_main_analysis.R`
- `03_robustness.R`
- `04_alternative_explanations.R`
- `04_figures.R`
- `05_tables.R`

## Replication Instructions

1. Install requirements:
   ```bash
   pip install pandas numpy statsmodels matplotlib
   # For R scripts: install.packages(c("did", "fixest", "ggplot2"))
   ```

2. Run the analysis scripts in order:
   ```bash
   cd code/
   # For Python scripts:
   python 01_fetch_data.py    # Downloads data
   python 02_analysis.py      # Runs main analysis
   python 03_figures.py       # Generates figures
   
   # For R scripts:
   Rscript 01_fetch_data.R
   Rscript 02_analysis.R
   Rscript 03_figures.R
   ```

3. Scripts are numbered in execution order (01_, 02_, etc.).

## Data Source

Census PUMS (Public Use Microdata Sample)
- API: https://api.census.gov/data/{YEAR}/acs/acs1/pums
- Documentation: https://www.census.gov/programs-surveys/acs/microdata.html
- No API key required for basic queries

## Notes

- Scripts may contain hardcoded paths that need adjustment
- Cached JSON files allow replication without re-downloading
- For full replication from scratch, delete JSON files and re-run fetch scripts

---
Generated by APEP publish_paper.py
